...
    <string name="action_got_it">知道了</string>
    <string name="action_view_location">查看位置</string>
    <string name="action_share_file">分享文件</string>
    <string name="action_start_scan">开始扫描</string>
    <string name="action_pause">暂停</string>
    <string name="action_continue">继续</string>
    <string name="action_retry">重试</string>
    <string name="action_rescan">重新扫描</string>
    <string name="action_stop_scan">停止扫描</string>
    <string name="action_view_all">查看全部</string>
    <string name="action_start_review">开始确认</string>
    <string name="action_view">查看</string>
    <string name="action_organize">去整理</string>
...
